# distiller-cm5-mcp-hub

./: .gitignore  .gitmodules  MCP_SERVICE_README.md  PROJECT_SUMMARY.md  README.md  build-deb.sh  main.py  manage_mcp_service.sh  mcp.service  mcp_config.json  mcp_transport.py  pyproject.toml  requirements.txt  run_all_mcps.py  test_sdk_imports.py  venv_wrapper.sh
.taskmaster/docs/: prd.txt
backend/: __init__.py  debug.py
backend/api/: __init__.py  debug.py  deploy.py  projects.py
backend/models/: __init__.py  project.py
backend/services/: __init__.py  project_manager.py
config/: settings.py
config/systemd/: mcp-dev-platform.service
debian/: changelog  control  copyright  distiller-mcp-hub.install  distiller-mcp-hub.triggers  lintian-overrides  postinst  postrm  prerm  rules
docs/: USAGE_GUIDE.md
examples/: sample_mcp_server.py
frontend/static/css/: style.css
frontend/static/js/: api.js  app.js  ui.js
frontend/templates/: index.html
projects/: 2afa9b22-3acc-48b4-9f8b-3eb3384b18e9.json  HOW_TO_WRITE_MCP.md  sanity_check.py
projects/camera-mcp/: README.md  camera.py  pyproject.toml  server.py
projects/mic-mcp/: README.md  pyproject.toml  requirements.txt  sdk_imports.py  server.py
projects/mic-mcp/recordings/: recording_1749160258149_metadata.json  recording_1749161100532_metadata.json
projects/speaker-mcp/: README.md  pyproject.toml  sdk_imports.py  server.py  speaker.py
scripts/: install.sh
