[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distiller-mcp-hub"
version = "0.1.0"
description = "MCP Hub with shared transport layer"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
# Include root-level Python modules  
py-modules = ["mcp_transport"]

[tool.setuptools.package-data]
"*" = ["*.py"] 