[project]
name = "distiller-mcp-hub"
version = "0.0.1"
description = "MCP Hub for Distiller CM5 - Audio/Video processing server"
authors = [{name = "PamirAI Incorporated", email = "support@pamir.ai"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice==0.5.2",
    "soundfile>=0.12.1",
    "picamera2==0.3.27",
    "mcp==1.10.1",
    "fastapi>=0.92.0,<0.112.0",
    "uvicorn>=0.17.6,<0.36.0",
    "starlette>=0.27.0,<0.40.0",
    "pydantic>=2.7.2,<3.0.0",
    "httpx>=0.23.3,<0.29.0",
    "python-multipart>=0.0.5,<0.1.0",
    "anyio>=4.5,<5.0.0",
    "httpcore>=0.16.3,<1.1.0",
    "h11>=0.14.0,<0.17.0",
    "typing-extensions>=4.4.0,<5.0.0",
    "numpy>=1.24.0",
    "pyaudio>=0.2.11",
    "PiDNG>=4.0.9",
    "piexif>=1.1.3",
    "simplejpeg>=1.8.2",
    "v4l2-python3>=0.3.5",
    "av>=15.0.0",
    "python-prctl>=1.8.1",
    "tqdm>=4.67.1",
    "python-dotenv>=1.1.1",
    "jsonschema>=4.24.0",
    "jsonschema-specifications>=2025.4.1",
    "referencing>=0.36.2",
    "rpds-py>=0.26.0",
    "httpx-sse>=0.4.1",
    "sse-starlette>=2.3.6",
    "pydantic-settings>=2.10.1",
    "CFFI>=1.17.1",
    "pycparser>=2.22",
    "libarchive-c>=5.3",
    "annotated-types>=0.7.0",
    "pydantic-core>=2.33.2",
    "typing-inspection>=0.4.1",
]

[project.scripts]
"distiller-mcp-manage" = "manage_mcp_service:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["distiller_mcp_hub*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.toml", "*.txt", "*.md", "*.py", "*.sh"]

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = [
    "projects/camera-mcp",
    "projects/mic-mcp", 
    "projects/speaker-mcp",
] 
