[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
distiller-cm5-sdk = { path = "/opt/distiller-cm5-sdk/dist/distiller_cm5_sdk-0.1.0-py3-none-any.whl" }

[project]
name = "distiller-cm5-mic-mcp"
version = "1.0.0"
description = "Microphone MCP Server - Provides audio recording and transcription tools using the distiller-cm5-sdk parakeet module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.2",
    "distiller-cm5-sdk",
]
[[project.authors]]
name = "Distiller"
email = "distiller@example.com"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
distiller-cm5-mic-mcp = "server:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto" 